# ezlang

./: .gitignore  .replit  LICENSE  example.ezlang.txt  pyproject.toml  replit.md
.cache/replit/: toolchain.json
src/ezlang/: __init__.py  __main__.py
